welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: ')' expected but ';' found.
  for (pas <- 1 to 5) {if (estSurBiscuit {nbBiscuit() = nbBiscuit +1} ; avance() ; } ;
                                                                      ^